--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -39,7 +39,7 @@
     <hr>
     <div id="shortUrl"><p>縮網址</p></div>
     <hr>
-    <div id="results"><p>點擊數</p></div>
+    <div id="results"><p>點擊數：</p></div>
     <script type="text/javascript">
       var shortUrl = [];
       function test(json){
