only show clicks

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,7 +4,7 @@
     <script>
 
       function appendResults(text) {
-        $("<tr></tr>").append("<td>" + text.short + "</td>" + "<td>" + text.clicks + "</td>")
+        $("<tr></tr>").append("<td>" + text.clicks + "</td>")
         .appendTo("#results");
         /*
         $("#results").append(text);
