add list to homepage

--- a/app/views/home/geturl.html.erb
+++ b/app/views/home/geturl.html.erb
@@ -81,7 +81,8 @@
     </style>
   </head>
   <body>
-    <h2>把要查詢的網址們貼在下面(可以含文字)，然後按抓資料</h2>
+    <h1>X.CO點擊查詢工具</h1>
+    <h2>使用方式：把要查詢的網址們貼在下面(可以含文字)，然後按抓資料</h2>
     <textarea id="url" style="min-width:700px;min-height:200px;"></textarea></br>
     <button onclick="getUrl();">抓資料</button>
     <div>※請等抓完所有資料後再按顯示資料</div>
