--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -76,6 +76,7 @@
   <body>
     <div><h1>heeeeha~~~get goo.gl analytics clicks!</h1></div>
     <div>
+      <h1>Goo.gl點擊查詢工具</h1>
       <h2>使用方法：</h2>
       <p>點及下方連結進入google表單，將要查的LINE訊息貼在第三行即可</p>
       <p>程式會自動抓只有縮網址的儲存格撈資料，只要確認短網址是獨立一格，前後無任何文字或符號即可</p>
