change homepage's xco list as absolute url with http

--- a/app/views/home/homepage.html.erb
+++ b/app/views/home/homepage.html.erb
@@ -7,6 +7,7 @@
 
 <h1>Koubrothers MK專用工具</h1>
 <ol class="list">
-  <li><%= link_to "X.CO點擊查詢工具", xco_path %></li>
+  <li><a href="http://urlanalytics.herokuapp.com/xco">X.CO點擊查詢工具</a></li>
+  <!--<li><%= link_to "X.CO點擊查詢工具", xco_path %></li>-->
   <li><%= link_to 'Goo.gl點擊查詢工具', google_path %></li>
 </ol>
