--- a/app/views/home/homepage.html.erb
+++ b/app/views/home/homepage.html.erb
@@ -9,6 +9,7 @@
 <ol class="list">
   <li><a href="http://urlanalytics.herokuapp.com/xco">X.CO點擊查詢工具</a></li>
   <li><a href="http://urlanalytics.herokuapp.com/xcoByTime">X.CO點擊查詢工具(查單日)</a></li>
+  <li><a href="http://urlanalytics.herokuapp.com/shortMeBaby">X.CO批次縮網址工具</a></li>
   <!--<li><%= link_to "X.CO點擊查詢工具", xco_path %></li>-->
   <li><%= link_to 'Goo.gl點擊查詢工具', google_path %></li>
 </ol>
